# discord-bot

./: .editorconfig  .envrc  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  Rocket.toml  build.rs  config.toml  default.nix  derp-view.sql  flake.nix  module.nix  refresh-view.sql  rust-toolchain.toml  shell.nix
.github/actions-rs/: grcov.yml
.github/workflows/: build.yml  coverage.yml
migrations/2019-11-21-192813_users/: down.sql  up.sql
nix/: sources.json
src/: berrytube.rs  cache.rs  config.rs  cron.rs  discord.rs  discord_eventhandler.rs  event_handler.rs  main.rs  migrations.rs  openai.rs  reddit.rs  serialization.rs  socketio.rs  substituting_string.rs  teamup.rs  util.rs  word_chunks.rs
src/berrytube/: mod.rs  sse.rs
src/commands/: derp.rs  meta.rs  misc.rs  mod.rs  pin.rs  ranks.rs
src/commands/derp/: localdb.rs  mod.rs
src/db/: migrations.rs  mod.rs  models.rs  operations.rs  schema.rs
src/db/migrations/: 0.sql  1.sql  2.sql  3.sql  4.sql
src/db/operations/: gib.rs  message_cache.rs  mod.rs  reddit.rs  stats.rs  sticky_roles.rs
src/discord/: april2024.rs  automod.rs  battlegrounds.rs  colors.rs  dispatch_error_hook.rs  event_handler.rs  hooks.rs  limits.rs  log_channel.rs  mod.rs  rules_check.rs  safe_reply.rs  starboard.rs  stats.rs  sticky_roles.rs  volatiles.rs
src/discord/commands/: april2024.rs  battlegrounds.rs  emotes.rs  gib.rs  mod.rs  ranks.rs  roll.rs  stats.rs  stocks.rs  test.rs
src/openai/: event_handler.rs  functions.rs  log_entry.rs  mod.rs  models.rs  tools.rs  word_chunks.rs
src/socketio/: client.rs  mod.rs  models.rs
src/util/: mod.rs  tuple_try.rs
src/webui/: auth.rs  bot.rs  guilds.rs  json.rs  me.rs  mod.rs  server_timing.rs  static.rs  util.rs
src/webui/graphql/: guilds.rs  mod.rs  query.rs
src/webui/util/: header_responder.rs  json.rs  mod.rs  rate_limiter.rs  request_origin.rs  request_scheme.rs  secure_request.rs  server_timing.rs  session_user.rs
webui/: .eslintignore  .eslintrc.json  .gitignore  .prettierignore  build-uikit.ts  index.html  jest.config.js  package-lock.json  package.json  pre-render.tsx  schema.graphql  tsconfig.json  util.ts
webui/__tests__/: util.test.ts
webui/__tests__/components/: DiscordImage.test.tsx
webui/components/: App.tsx  Guild.tsx  Guilds.tsx
webui/src/: apitypes.ts  index.css  index.html  index.less  index.template.html  index.tsx  util.test.ts  util.ts
webui/src/__generated__/: GetBot.ts
webui/src/components/: App.tsx  DiscordImage.test.tsx  DiscordImage.tsx  Errors.tsx  Guild.tsx  GuildRanks.tsx  GuildRules.tsx  GuildStats.tsx  Guilds.tsx  NavLink.tsx  NavbarBot.tsx  NavbarUser.tsx  Redirect.tsx  Spinner.tsx
webui/src/components/__generated__/: GetBot.ts  GetGuilds.ts  GetMe.ts  SetRankMembership.ts
webui/typings/: stubs.d.ts
