[package]
name = "discord-bot"
description = "Discord bot for BerryTube"
version = "0.2.0"
license = "MIT"
publish = false
edition = "2021"
rust-version = "1.74"
readme = "README.md"
repository = "https://github.com/Atte/discord-bot"

[package.metadata.cargo-all-features]
skip_optional_dependencies = true

[dependencies]
async-openai = { version = "0.26.0", optional = true }
async-recursion = "1.1"
async-trait = "0.1.83"
base64 = "0.22"
bson = { version = "2.13", features = ["chrono-0_4"] }
bytes = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.10", optional = true }
color-eyre = "0.6"
conv = "0.3"
derivative = "2.2"
derive_more = { version = "1.0", features = ["as_ref", "deref", "display"] }
env_logger = "0.11"
futures = "0.3"
itertools = "0.13"
lazy-regex = "3.3.0"
lazy_static = "1.4"
log = "0.4"
maplit = "1.0"
mexprp = { version = "0.3.1", default-features = false }
mongodb = "3.1"
nonzero_ext = "0.3"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "deflate", "json", "http2"] }
schemars = { version = "0.8", optional = true }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_repr = { version = "0.1", optional = true }
serde_with = { version = "3.11", features = ["chrono"] }
serenity = "0.12"
tabwriter = "1.2"
tokio = { version = "1.1", features = ["fs", "macros", "rt", "sync", "time", "rt-multi-thread"] }
tokio-stream = { version = "0.1", optional = true }
toml = "0.8"
void = "1.0"
zip = { version = "2.2", default-features = false, features = ["deflate", "time"] }

[dev-dependencies]
mock_instant = "0.5"
proptest = "1.1"

[features]
default = []
berrytube = ["reqwest/stream", "dep:tokio-stream"]
cron = []
openai = ["dep:async-openai"]
teamup = ["dep:serde_repr"]
