[package]
name = "discord-bot"
description = "Discord bot for BerryTube"
version = "0.2.0"
license = "MIT"
publish = false
edition = "2024"
rust-version = "1.85"
readme = "README.md"
repository = "https://github.com/Atte/discord-bot"

[package.metadata.cargo-all-features]
skip_optional_dependencies = true

[dependencies]
async-openai = { version = "0.27", optional = true }
async-trait = "0.1"
base64 = "0.22"
bson = { version = "2.13", features = ["chrono-0_4"] }
bytes = "1.0"
cached = { version = "0.54", features = ["async"] }
chrono = { version = "0.4", features = ["serde"] }
color-eyre = "0.6"
conv = "0.3"
derivative = "2.2"
derive_more = { version = "2.0", features = ["as_ref", "deref", "display"] }
env_logger = "0.11"
futures = "0.3"
itertools = "0.14"
lazy-regex = "3.3"
log = "0.4"
maplit = "1.0"
mexprp = { version = "0.3", default-features = false }
mongodb = "3.1"
once_cell = "1.20"
poise = "0.6"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "deflate", "json", "http2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = { version = "0.1", optional = true }
serde_with = { version = "3.11", features = ["chrono_0_4"] }
serenity = "0.12"
tabwriter = "1.2"
tokio = { version = "1.1", features = ["fs", "macros", "sync", "time", "rt-multi-thread"] }
tokio-stream = { version = "0.1", optional = true }
toml = { version = "0.8", default-features = false, features = ["parse"] }
zip = { version = "2.2", default-features = false, features = ["deflate", "time"] }

[dev-dependencies]
proptest = "1.1"

[features]
default = []
berrytube = ["reqwest/stream", "dep:tokio-stream"]
cron = []
openai = ["dep:async-openai"]
teamup = ["dep:serde_repr"]
dropdowns = []
